--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
+    "dayjs": "^1.11.11",
     "gsap": "^3.12.4",
     "jsonwebtoken": "^9.0.2",
     "locomotive-scroll": "^4.1.4",
